hphp/hack/test/typecheck/attributes/enum_class_constant_attribute.bad.php
<?hh

class Cc implements HH\ClassConstantAttribute {}

enum class SomeEnumClass {
  <<Cc>>int NOT_ALLOWED = 42;
}
